examples/carstore/carstore.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carstore
  labels:
    app: carstore
spec:
  selector:
    matchLabels:
      app: carstore
  template:
    metadata:
      labels:
        app: carstore
    spec:
      containers:
        - name: carstore
          image: quay.io/3scale/authorino:echo-api
          ports:
            - containerPort: 3000
              name: http
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: carstore
spec:
  selector:
    app: carstore
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
