examples/carstore/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: carstore
  labels:
    app: carstore
spec:
  parentRefs:
    - name: kuadrant-gwapi-gateway
      namespace: kuadrant-system
  hostnames: ["*.carstore.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/car"
          method: GET
      backendRefs:
        - name: carstore
          port: 80
